Revision history for {{$dist->name}}

{{$NEXT}}

0.02      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]
     * Listener didn't properly weaken reference to peer object

  [DOCUMENTATION]
     * better synopsis

0.01      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)